Steps and configurations for export application to Docker, added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,4 @@
+play.http.secret.key="^3yWq/t@6`C:FL9OomHl2>G/C?]</R3:Sr2O9Z[X?xncXeUJqvow4zuB[UshF/J5"
 # https://www.playframework.com/documentation/latest/Configuration
 
 slick.dbs.default.profile="slick.jdbc.SQLiteProfile$"
